Fix NPE, enable? Java preview for Gradle