@@ -15,3 +15,7 @@ task runClient {
 task runServer {
     dependsOn ':DonjinKrawler-Server:run'
 }
+
+tasks.withType(JavaCompile).each {
+    it.options.compilerArgs.add('--enable-preview')
+}
